# jpg-to-pdf-converter

./: .gitignore  pyproject.toml  wsgi.py
src/domain/: exception.py  model.py  validator.py  validators.py
src/entrypoints/api/: app.py
src/entrypoints/api/rest/: convert.py
src/repository/: memoryrepo.py
src/serializers/: model.py
src/service/: converter.py  validator.py
src/use_cases/: converted_list.py
test/: conftest.py  test_models.py  test_repository.py  test_rest_api.py  test_serializers.py  test_service.py  test_use_cases.py
