[tool.poetry]
name = "jpg-to-pdf-converter"
version = "0.1.0"
description = ""
authors = ["Ilkin Um <ilkinum@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
