[tool.poetry]
name = "jpeg-to-pdf-converter"
version = "0.1.0"
description = "Flask API for jpeg to pdf conversion"
authors = ["ilkin-um <ilkinum@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
img2pdf = ">=0.4.4"
Pillow = ">=9.1.0"
flask = ">-2.1.12"

[tool.poetry.dev-dependencies]
pytest = ">-7.1.2"
pytest-flask = ">=1.2.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
